...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Myi-we-UlO">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="217"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dig-2I-ieu">
                                        <rect key="frame" x="30" y="188" width="315" height="21"/>
                                        <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iS1-V8-HB2">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ErR-Aj-jpb">
                                        <rect key="frame" x="299" y="34" width="60" height="33"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="4qp-mi-9f7"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="17"/>
                                        <state key="normal" title="Edit"/>
                                        <connections>
                                            <action selector="editProfileAction:" destination="yfZ-dQ-P8u" eventType="touchUpInside" id="FVq-Oh-cYe"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.71862479468524953" green="0.78769712045025375" blue="0.75711528930246808" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gy5-jH-DlT">
                                <rect key="frame" x="158" y="557" width="59" height="33"/>
                                <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="17"/>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" red="1" green="0.0" blue="0.15002925204268891" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="logoutActionButton:" destination="yfZ-dQ-P8u" eventType="touchUpInside" id="UwO-7E-Cqv"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="3G4-Lh-jxY" firstAttribute="top" secondItem="lNo-Qp-7b1" secondAttribute="bottom" constant="8" id="mZQ-5c-Ega"/>
                            <constraint firstItem="Gy5-jH-DlT" firstAttribute="centerX" secondItem="1Qy-5m-sMx" secondAttribute="centerX" id="wUz-DV-ye7"/>
                            <constraint firstItem="CdZ-y6-tlp" firstAttribute="top" secondItem="3G4-Lh-jxY" secondAttribute="bottom" constant="8" id="yXn-sT-rlV"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="p7l-jL-pxy"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Accaunt" image="сontacts" selectedImage="сontacts" id="rhA-wj-YWQ" userLabel="Accaunt"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="editButton" destination="ErR-Aj-jpb" id="r0z-u8-oOg"/>
                        <outlet property="logoutButton" destination="Gy5-jH-DlT" id="y5T-PC-uA1"/>
                        <outlet property="userBio" destination="utf-3j-uqe" id="ieh-Bk-Gce"/>
                        <outlet property="userCreditCard" destination="CdZ-y6-tlp" id="nCe-IR-D0l"/>
...
