...
                                            <action selector="loginAction:" destination="3R1-RP-aTW" eventType="touchUpInside" id="v2A-7k-OMz"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6p-PH-28c">
                                        <rect key="frame" x="94" y="363" width="187" height="31"/>
                                        <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="15"/>
                                        <state key="normal" title="First time here? Register"/>
                                        <connections>
                                            <segue destination="LbK-xf-G80" kind="show" id="DQy-gJ-HNk"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x5H-Ne-pwa">
                                        <rect key="frame" x="13" y="8" width="46" height="33"/>
                                        <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="17"/>
                                        <state key="normal" title="Close"/>
                                        <connections>
                                            <segue destination="MTc-5H-WfX" kind="unwind" unwindAction="unwindFuncToUserDataWithUnwindSegue:" id="kWe-Yt-8ss"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.8447944847655422" green="0.91718223222016082" blue="0.8579301719110789" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
