...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="h9P-n5-JQJ">
                                        <rect key="frame" x="129" y="240" width="117" height="29"/>
                                        <segments>
                                            <segment title="Male"/>
                                            <segment title="Female"/>
                                        </segments>
                                        <connections>
                                            <action selector="segmentedGenderAction:" destination="KBx-gA-CX5" eventType="valueChanged" id="2fl-R4-PMz"/>
                                        </connections>
                                    </segmentedControl>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zgc-OX-TP1">
...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dha-oA-B0N">
                                        <rect key="frame" x="163.66666666666666" y="515" width="48" height="33"/>
                                        <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="17"/>
                                        <state key="normal" title="Apply"/>
                                        <connections>
                                            <action selector="registerActionButton:" destination="KBx-gA-CX5" eventType="touchUpInside" id="NQS-ED-pAA"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i4x-wF-Z19">
                                        <rect key="frame" x="13" y="8" width="61" height="33"/>
...
