...
        }
        else
        {
            let errorAuthText = "You aren't login"
            isAuththorization = .isNotAuth
            userLogin.text = errorAuthText
            editButton.setTitle("Log in", for: .normal)
            logoutButton.isUserInteractionEnabled = false
            logoutButton.setTitleColor(UIColor.gray, for: .normal)
        }
    }
    
    private func deauthorization(completion: @escaping (Bool) -> Void)
...
