...
            </objects>
            <point key="canvasLocation" x="4113" y="-279"/>
        </scene>
        <!--ITShop-->
        <scene sceneID="5Yc-cZ-muQ">
            <objects>
                <tableViewController restorationIdentifier="ITShop" storyboardIdentifier="ITShop" id="5su-qR-fdw" customClass="GoodsListTableViewController" customModule="a_chursin" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Qrj-YT-Vl2">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="goodsCell" rowHeight="107" id="FXG-4N-ZjM" customClass="GoodsListTableViewCell" customModule="a_chursin" customModuleProvider="target">
...
                        <connections>
                            <outlet property="dataSource" destination="5su-qR-fdw" id="eEx-Mg-jZ8"/>
                            <outlet property="delegate" destination="5su-qR-fdw" id="y2c-z1-5uy"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="ITShop" id="Cks-O2-TfT">
                        <barButtonItem key="rightBarButtonItem" title="Basket" id="8kV-4G-8id">
                            <connections>
                                <action selector="toBasketAction:" destination="5su-qR-fdw" id="wwS-NS-I27"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            <point key="canvasLocation" x="3479.1999999999998" y="151.57421289355324"/>
        </scene>
        <!--AccauntDataStoryboard-->
        <scene sceneID="OIg-4c-17O">
            <objects>
                <viewControllerPlaceholder storyboardName="AccauntDataStoryboard" id="54G-Bb-Pcx" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Accaunt" image="сontacts" selectedImage="сontacts" id="xlC-sy-Gjv"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6a4-xg-hPT" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2499" y="729"/>
        </scene>
        <!--Product View Controller-->
...
            <point key="canvasLocation" x="1599" y="556"/>
        </scene>
        <!--Shop-->
        <scene sceneID="RVf-8L-iMf">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hGi-l4-x6v" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Shop" image="ITlogo" selectedImage="ITlogo" id="uNP-qu-c59"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VgV-XZ-GJn">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.81568627449999997" green="0.89411764709999997" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
...
